# mas_uav

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  package.xml  setup.py
AgentsNode/: Dockerfile
AgentsNode/uav_agents/: build.gradle  rosbridgeArch.java  sample_agent.asl  uav_agents.mas2j
MiddleNode/: Dockerfile  actions_manifest  perceptions_manifest
MiddleNode/fly/: CMakeLists.txt  package.xml
PythonAgentsHelpers/: rosJason.py
ardupilot_ws/devel/: .catkin  .rosinstall  setup.sh
comm/: comm.py  yellow_pages.py
config/: actions_manifest  perceptions_manifest
launch/: couple_uav_jason_internal.launch  multiple_uav_jason_internal.launch  multiple_uav_python_internal.launch  single_uav_jason.launch  single_uav_python.launch
multipleUAV/: DockerfileReceiver  README.md  send.sh
multipleUAV/DockerCompose/: DockerfileComm  comm.py  comm.sh  docker-compose.yaml  droneA.py
multipleUAV/Receiver/: droneB.py  receive.py  receive.sh
multipleUAV/Sender/: DockerfileSender  send.py  send.sh  simple_comms.py
multipleUAV/comm/: Dockerfile  comm.py  droneA.py  droneB.py  simple_comms.py  yellow_pages.py
multipleUAV/droneA/: docker-compose.yaml
multipleUAV/droneB/: comm  docker-compose.yaml
params/: local_ips.yaml  local_ips_multiple.yaml
rescueCoord/: README.md
rescueCoord/Results/: jason_analysis.ipynb  jason_stats_r1.csv  jason_stats_r2.csv  jason_stats_scout.csv  python_analysis.ipynb  python_stats_r1.csv  python_stats_r2.csv  python_stats_scout.csv
rescueCoordNs3/: README.md
singleUAV/: README.md  docker-compose.yaml
(+112 files in other folders)
